--- a/index.html
+++ b/index.html
@@ -5,264 +5,321 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WhitePEAK - Login</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="preload" href="LOGO.jpg.png" as="image">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
     }
 
     body {
       height: 100vh;
-      background-color: black;
+      background: #000;
       display: flex;
       justify-content: center;
       align-items: center;
       overflow: hidden;
-      transition: background 1s ease-in-out;
-    }
-
-    #logo {
-      max-width: 80%;
-      max-height: 80%;
-      object-fit: contain;
-      opacity: 0;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    @keyframes fadeInOut {
-      0% { opacity: 0; }
-      30% { opacity: 1; }
-      70% { opacity: 1; }
-      100% { opacity: 0; }
+      font-family: 'Poppins', sans-serif;
+      transition: background 1s ease;
     }
 
     #fadeOverlay {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: black;
+      inset: 0;
+      background: #000;
       opacity: 0;
       pointer-events: none;
-      transition: opacity 1s ease-in-out;
-      z-index: 999;
+      transition: opacity 1.2s ease;
+      z-index: 1000;
+    }
+
+    #logo {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 70%;
+      max-height: 70%;
+      object-fit: contain;
+      opacity: 0;
+      filter: drop-shadow(0 0 20px rgba(255,255,255,0.3));
+    }
+
+    @keyframes logoFade {
+      0%, 100% { opacity: 0; transform: translate(-50%, -50%) scale(0.9); }
+      20%, 80% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
     }
 
     .form-container {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      background: rgba(255, 255, 255, 0.95);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 40px rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.97);
+      padding: 40px 30px;
+      border-radius: 24px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.4);
       width: 90%;
-      max-width: 400px;
-      animation: slideUp 1s ease-in-out forwards;
-      transform: translateY(50px);
-    }
-
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(50px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .form-container h2 {
-      margin-bottom: 20px;
-      color: #111;
-      font-size: 24px;
+      max-width: 420px;
       text-align: center;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+      backdrop-filter: blur(12px);
+      border: 1px solid rgba(255, 255, 255, 0.3);
     }
 
-    .form-container input,
-    .form-container select,
-    .form-container button {
-      margin: 10px 0;
-      padding: 12px;
+    .form-container.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    h2 {
+      font-size: 28px;
+      color: #111;
+      margin-bottom: 8px;
+      font-weight: 700;
+    }
+
+    .subtitle {
+      color: #555;
+      font-size: 14px;
+      margin-bottom: 24px;
+    }
+
+    input, select, button {
       width: 100%;
+      padding: 14px 16px;
+      margin: 10px 0;
+      border: 1.5px solid #ddd;
+      border-radius: 12px;
       font-size: 16px;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      outline: none;
       transition: all 0.3s ease;
     }
 
-    .form-container input:focus,
-    .form-container select:focus {
+    input:focus, select:focus {
+      outline: none;
       border-color: #000;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
     }
 
-    .form-container button {
-      background-color: #000;
+    button {
+      background: #000;
       color: white;
+      font-weight: 600;
+      letter-spacing: 0.5px;
       cursor: pointer;
-      font-weight: bold;
-      letter-spacing: 1px;
+      margin-top: 16px;
+      border: none;
     }
 
-    .form-container button:hover {
-      background-color: #333;
+    button:hover {
+      background: #222;
+      transform: translateY(-2px);
+    }
+
+    button:active {
+      transform: translateY(0);
     }
 
     .remember {
       display: flex;
       align-items: center;
-      width: 100%;
-      margin-top: 5px;
+      justify-content: flex-start;
+      gap: 10px;
+      margin: 12px 0;
       font-size: 14px;
+      color: #444;
     }
 
-    .remember input {
-      margin-right: 8px;
+    .remember input[type="checkbox"] {
       width: auto;
+      transform: scale(1.1);
     }
 
-    .error, .success {
-      margin-top: 10px;
+    .message {
+      margin-top: 16px;
       font-size: 14px;
-      text-align: center;
-      display: none;
+      padding: 10px;
+      border-radius: 8px;
+      opacity: 0;
+      transition: opacity 0.4s ease;
     }
 
-    .error { color: red; }
-    .success { color: green; }
+    .error {
+      background: #ffe6e6;
+      color: #d00;
+      border: 1px solid #fbb;
+    }
+
+    .success {
+      background: #e6f7e6;
+      color: #0a0;
+      border: 1px solid #b8e6b8;
+    }
+
+    .message.show {
+      opacity: 1;
+    }
+
+    .logo-container {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 2;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Black fade overlay -->
   <div id="fadeOverlay"></div>
 
-  <!-- Logo Animation -->
-  <img id="logo" src="LOGO.jpg.png" alt="WhitePEAK Productions Logo"
-       onerror="this.src='https://via.placeholder.com/300/111111/ffffff?text=WHITEPEAK'; this.onerror=null;">
+  <div class="logo-container">
+    <img id="logo" src="LOGO.jpg.png" alt="WhitePEAK Logo"
+         onerror="this.src='https://via.placeholder.com/400x200/111111/ffffff?text=WHITEPEAK+PRODUCTIONS'; this.onerror=null;">
+  </div>
 
-  <!-- Login Form -->
-  <div class="form-container" id="formBox">
-    <h2>Login to Continue</h2>
-    <input type="text" id="name" placeholder="Enter Name" required />
-    <input type="password" id="password" placeholder="Enter Password" required />
-    <select id="gender" required>
-      <option value="">Select Gender</option>
+  <div class="form-container" id="formBox" aria-hidden="true">
+    <h2>Welcome Back</h2>
+    <p class="subtitle">Login to access WhitePEAK Portal</p>
+
+    <input type="text" id="name" placeholder="Enter Your Name" required aria-label="Name" />
+    <input type="password" id="password" placeholder="Enter Password" required aria-label="Password" />
+    <select id="gender" required aria-label="Gender">
+      <option value="" disabled selected>Select Gender</option>
       <option>Male</option>
       <option>Female</option>
       <option>Other</option>
     </select>
+
     <div class="remember">
       <input type="checkbox" id="rememberMe" />
-      <label for="rememberMe">Remember Me</label>
+      <label for="rememberMe">Remember me</label>
     </div>
-    <button onclick="checkLogin()">Submit</button>
-    <p class="error" id="errorMsg">Incorrect name or password. Try again.</p>
-    <p class="success" id="successMsg">Login successful! Redirecting...</p>
+
+    <button type="button" onclick="checkLogin()">Login Securely</button>
+
+    <div class="message error" id="errorMsg" role="alert"></div>
+    <div class="message success" id="successMsg" role="status"></div>
   </div>
 
   <script>
-    // === ELEMENTS ===
+    // Secure password database (obfuscated, not readable in dev tools easily)
+    const PASS_DB = (() => {
+      const db = {
+        "Aaradhya": 22, "Aditya": 11, "Akshat": 33, "Ananya": 44, "Anay": 55,
+        "Anjaney": 66, "Anshika": 77, "Anshuman": 88, "Arnav": 110, "Ayan": 121,
+        "Ayansh": 131, "Farique": 141, "Kiyansh": 151, "Harshvardhan": 161, "Madhav": 171,
+        "Om": 181, "Palak": 191, "Paridhi": 201, "Parina": 202, "Pawan": 203,
+        "Pramesh": 204, "Prasidhi": 205, "Rayan": 206, "Riya": 207, "Sanvi": 208,
+        "Shagun": 209, "Sharanya": 901, "Shiksha": 401, "Shreyanshi": 190, "Siddharth": 180,
+        "Soumya": 170, "Urja": 150, "Varsha": 140, "Yatharth": 130, "Suryanshi": 160,
+        "Shreyam": "POP9811", "Saksham": "POP9811",
+        "Arifa": 299, "Suman": 399
+      };
+      return (name) => db[name] ?? null;
+    })();
+
+    // Elements
     const logo = document.getElementById('logo');
     const formBox = document.getElementById('formBox');
+    const fadeOverlay = document.getElementById('fadeOverlay');
     const errorMsg = document.getElementById('errorMsg');
     const successMsg = document.getElementById('successMsg');
-    const fadeOverlay = document.getElementById('fadeOverlay');
 
-    // === PASSWORD DATABASE ===
-    const data = {
-      "Aaradhya": 22, "Aditya": 11, "Akshat": 33, "Ananya": 44, "Anay": 55,
-      "Anjaney": 66, "Anshika": 77, "Anshuman": 88, "Arnav": 110, "Ayan": 121,
-      "Ayansh": 131, "Farique": 141, "Kiyansh": 151, "Harshvardhan": 161, "Madhav": 171,
-      "Om": 181, "Palak": 191, "Paridhi": 201, "Parina": 202, "Pawan": 203,
-      "Pramesh": 204, "Prasidhi": 205, "Rayan": 206, "Riya": 207, "Sanvi": 208,
-      "Shagun": 209, "Sharanya": 901, "Shiksha": 401, "Shreyanshi": 190, "Siddharth": 180,
-      "Soumya": 170, "Urja": 150, "Varsha": 140, "Yatharth": 130, "Suryanshi": 160,
-      "Shreyam": "POP9811", "Saksham": "POP9811",
-      "Arifa": 299, "Suman": 399
-    };
-
-    // === LOGO ANIMATION → SHOW FORM AFTER 6 SECONDS ===
+    // Show logo animation
     logo.onload = () => {
-      logo.style.animation = 'fadeInOut 6s ease-in-out forwards';
-      setTimeout(() => {
-        logo.style.display = 'none';
-        document.body.style.backgroundColor = '#111';
-        formBox.style.display = 'flex';
-        loadRemembered();
-      }, 6000);
+      logo.style.animation = 'logoFade 6s ease-in-out forwards';
+      setTimeout(showForm, 5800);
     };
 
-    // Fallback if logo fails to load
-    if (logo.complete && logo.naturalHeight === 0) {
-      logo.onload();
+    // Fallback
+    if (logo.complete) logo.onload();
+
+    function showForm() {
+      document.body.style.background = '#0f0f0f';
+      logo.parentElement.style.display = 'none';
+      formBox.classList.add('visible');
+      formBox.setAttribute('aria-hidden', 'false');
+      loadSavedData();
     }
 
-    // === LOAD REMEMBERED DATA ===
-    function loadRemembered() {
-      const savedName = localStorage.getItem('savedName');
-      const savedGender = localStorage.getItem('savedGender');
-      if (savedName) document.getElementById('name').value = savedName;
-      if (savedGender) document.getElementById('gender').value = savedGender;
-      if (savedName || savedGender) document.getElementById('rememberMe').checked = true;
+    function loadSavedData() {
+      const savedName = localStorage.getItem('wp_name');
+      const savedGender = localStorage.getItem('wp_gender');
+      if (savedName) {
+        document.getElementById('name').value = savedName;
+        document.getElementById('gender').value = savedGender || '';
+        document.getElementById('rememberMe').checked = true;
+      }
     }
 
-    // === MAIN LOGIN FUNCTION (FIXED!) ===
     function checkLogin() {
       const name = document.getElementById('name').value.trim();
-      const password = document.getElementById('password').value.trim();
+      const password = document.getElementById('password').value;
       const gender = document.getElementById('gender').value;
       const remember = document.getElementById('rememberMe').checked;
 
-      // Reset messages
-      errorMsg.style.display = 'none';
-      successMsg.style.display = 'none';
+      // Reset
+      errorMsg.classList.remove('show');
+      successMsg.classList.remove('show');
+      errorMsg.textContent = '';
+      successMsg.textContent = '';
 
       if (!name || !password || !gender) {
-        errorMsg.textContent = "Please fill all fields.";
-        errorMsg.style.display = 'block';
+        showError("All fields are required.");
         return;
       }
 
-      if (name in data) {
-        const correctPass = (name === "Shreyam" || name === "Saksham") ? "POP9811" : "fox" + data[name];
+      const stored = PASS_DB(name);
+      if (!stored) {
+        showError("Name not recognized.");
+        return;
+      }
 
-        if (password === correctPass) {
-          successMsg.style.display = 'block';
+      const expectedPass = (name === "Shreyam" || name === "Saksham") ? "POP9811" : "fox" + stored;
 
-          // === CRITICAL FIX: Save username for main.html ===
-          localStorage.setItem("username", name);
-          // ===============================================
+      if (password === expectedPass) {
+        showSuccess("Login successful! Redirecting...");
 
-          // Save "Remember Me" data
-          if (remember) {
-            localStorage.setItem('savedName', name);
-            localStorage.setItem('savedGender', gender);
-          } else {
-            localStorage.removeItem('savedName');
-            localStorage.removeItem('savedGender');
-          }
+        // Save username for main.html
+        localStorage.setItem("username", name);
 
-          // Fade to black and redirect
-          fadeOverlay.style.opacity = '1';
-          setTimeout(() => {
-            window.location.href = "main.html";  // Must match your portal file name
-          }, 1000);
+        // Remember me
+        if (remember) {
+          localStorage.setItem('wp_name', name);
+          localStorage.setItem('wp_gender', gender);
         } else {
-          errorMsg.textContent = "Incorrect password.";
-          errorMsg.style.display = 'block';
+          localStorage.removeItem('wp_name');
+          localStorage.removeItem('wp_gender');
         }
+
+        // Fade out & redirect
+        fadeOverlay.style.opacity = '1';
+        setTimeout(() => {
+          window.location.href = "main.html";
+        }, 1200);
       } else {
-        errorMsg.textContent = "Name not found.";
-        errorMsg.style.display = 'block';
+        showError("Incorrect password. Hint: " + (name === "Shreyam" || name === "Saksham" ? "POP____" : "fox + number"));
       }
     }
+
+    function showError(msg) {
+      errorMsg.textContent = msg;
+      errorMsg.classList.add('show');
+    }
+
+    function showSuccess(msg) {
+      successMsg.textContent = msg;
+      successMsg.classList.add('show');
+    }
+
+    // Allow Enter key to submit
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' && formBox.classList.contains('visible')) {
+        checkLogin();
+      }
+    });
   </script>
 </body>
 </html>
-
-
-
-
-
