--- a/main.html
+++ b/main.html
@@ -15,84 +15,90 @@
 
     body {
       background: linear-gradient(135deg, #0f0f0f, #1c1c1c);
-      color: white;
+      color: #fff;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      transition: background 0.5s, color 0.5s;
       overflow-x: hidden;
+      transition: background 0.5s ease;
     }
 
     header {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 15px 25px;
-      background: rgba(0, 0, 0, 0.9);
-      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.1);
+      justify-content: space-between;
+      padding: 16px 24px;
+      background: rgba(0, 0, 0, 0.92);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
       position: sticky;
       top: 0;
       z-index: 1000;
+      flex-wrap: wrap;
+      gap: 12px;
     }
 
     header img {
-      height: 45px;
-      border-radius: 10px;
+      height: 48px;
+      border-radius: 12px;
       object-fit: contain;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     }
 
     .center-text {
+      flex: 1;
       text-align: center;
-      flex-grow: 1;
-      animation: fadeIn 2s ease forwards;
+      min-width: 200px;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+    .center-text h1 {
+      font-size: 19px;
+      font-weight: 700;
+      letter-spacing: 0.5px;
     }
 
-    header h1 {
-      font-size: 18px;
-      font-weight: 600;
-    }
-
-    header p {
-      font-size: 12px;
-      color: #bbb;
+    .center-text p {
+      font-size: 13px;
+      color: #aaa;
       font-style: italic;
-      margin-top: 3px;
+      margin-top: 4px;
+    }
+
+    .controls {
+      display: flex;
+      align-items: center;
+      gap: 16px;
     }
 
     .toggle-container {
-      position: absolute;
-      top: 18px;
-      right: 100px;
       display: flex;
       align-items: center;
-      gap: 6px;
+      gap: 8px;
+      font-size: 13px;
+      color: #ccc;
     }
 
     .toggle {
-      width: 40px;
-      height: 20px;
+      width: 44px;
+      height: 22px;
       background: #444;
-      border-radius: 20px;
+      border-radius: 50px;
       position: relative;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: background 0.3s ease;
     }
 
     .toggle::before {
       content: "";
       position: absolute;
-      top: 2px;
-      left: 2px;
+      top: 3px;
+      left: 3px;
       width: 16px;
       height: 16px;
       background: white;
       border-radius: 50%;
-      transition: transform 0.3s;
+      transition: transform 0.3s ease;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.4);
     }
 
     .toggle.active {
@@ -100,48 +106,50 @@
     }
 
     .toggle.active::before {
-      transform: translateX(20px);
+      transform: translateX(22px);
     }
 
     .signout-btn {
-      position: absolute;
-      top: 15px;
-      right: 25px;
-      background: #ff4d4d;
+      background: #ff3b30;
       border: none;
       color: white;
-      padding: 6px 10px;
-      border-radius: 6px;
-      cursor: pointer;
+      padding: 8px 14px;
+      border-radius: 8px;
       font-size: 13px;
-      transition: background 0.3s;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 6px rgba(255, 59, 48, 0.3);
     }
 
     .signout-btn:hover {
       background: #ff1a1a;
+      transform: translateY(-1px);
     }
 
     main {
-      flex-grow: 1;
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      text-align: center;
       padding: 40px 20px;
+      text-align: center;
     }
 
     .welcome {
-      font-size: 28px;
-      font-weight: 600;
+      font-size: 30px;
+      font-weight: 700;
       margin-bottom: 50px;
-      opacity: 0;
-      animation: fadeInUp 2s forwards;
-      animation-delay: 0.3s;
+      background: linear-gradient(90deg, #fff, #4ea3ff);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      animation: fadeInUp 1.2s ease forwards;
     }
 
     @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(40px); }
+      from { opacity: 0; transform: translateY(30px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
@@ -149,173 +157,335 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
-      margin-bottom: 50px;
+      gap: 24px;
       max-width: 1000px;
+      margin-bottom: 60px;
     }
 
     .section {
-      width: 250px;
-      height: 120px;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 12px;
+      width: 260px;
+      height: 130px;
+      background: rgba(255, 255, 255, 0.08);
+      border: 1.5px solid rgba(255, 255, 255, 0.15);
+      border-radius: 16px;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 20px;
+      font-size: 21px;
       font-weight: 600;
-      transition: all 0.3s ease;
+      color: #fff;
       cursor: pointer;
+      transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+      position: relative;
+      overflow: hidden;
+      backdrop-filter: blur(5px);
+    }
+
+    .section::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: linear-gradient(135deg, rgba(255,255,255,0.1), transparent);
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    .section:hover::before {
+      opacity: 1;
     }
 
     .section:hover {
-      transform: scale(1.05);
+      transform: translateY(-8px) scale(1.03);
       background: rgba(255, 255, 255, 0.15);
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.3);
+      border-color: #4ea3ff;
     }
 
     .events {
-      margin-top: 30px;
-      padding: 20px;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 15px;
-      width: 80%;
-      max-width: 800px;
+      background: rgba(255, 255, 255, 0.06);
       border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 16px;
+      padding: 24px;
+      width: 85%;
+      max-width: 820px;
+      text-align: left;
+      backdrop-filter: blur(8px);
     }
 
     .events h3 {
-      margin-bottom: 10px;
-      font-size: 22px;
+      font-size: 23px;
+      margin-bottom: 12px;
+      color: #4ea3ff;
     }
 
     .funny-text {
-      margin-top: 60px;
-      font-size: 26px;
-      font-weight: 700;
-      color: white;
-      opacity: 0;
-      animation: dramaticFade 3s ease-in-out forwards;
-      animation-delay: 1.5s;
+      margin-top: 70px;
+      font-size: 27px;
+      font-weight: 800;
+      color: #ff4d4d;
+      text-shadow: 0 0 15px rgba(255, 77, 77, 0.5);
+      animation: pulse 3s infinite;
     }
 
-    @keyframes dramaticFade {
-      0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
-      50% { opacity: 1; transform: scale(1.05) rotate(3deg); text-shadow: 0 0 15px #fff; }
-      100% { opacity: 1; transform: scale(1) rotate(0); text-shadow: 0 0 5px #fff; }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
     }
 
     footer {
       background: rgba(0, 0, 0, 0.9);
-      color: #bbb;
+      color: #ccc;
       text-align: center;
-      padding: 15px;
+      padding: 18px;
       font-size: 14px;
       border-top: 1px solid rgba(255, 255, 255, 0.1);
     }
 
+    footer a {
+      color: #4ea3ff;
+      text-decoration: none;
+    }
+
+    footer a:hover { text-decoration: underline; }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.85);
+      backdrop-filter: blur(10px);
+      justify-content: center;
+      align-items: center;
+      z-index: 2000;
+      animation: fadeIn 0.4s ease;
+    }
+
+    .modal-content {
+      background: #1a1a1a;
+      padding: 32px;
+      border-radius: 20px;
+      text-align: center;
+      max-width: 400px;
+      width: 90%;
+      border: 1px solid #444;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
+      animation: zoomIn 0.4s ease;
+    }
+
+    .modal-content h3 {
+      margin-bottom: 16px;
+      font-size: 22px;
+      color: #ff4d4d;
+    }
+
+    .modal-content p {
+      margin-bottom: 20px;
+      color: #ddd;
+      line-height: 1.6;
+    }
+
+    .close-btn {
+      background: #4ea3ff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .close-btn:hover {
+      background: #3b8ed9;
+    }
+
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    @keyframes zoomIn { from { transform: scale(0.7); } to { transform: scale(1); } }
+
+    /* DEV GLOW */
+    @keyframes glow {
+      from { text-shadow: 0 0 5px #4ea3ff; }
+      to { text-shadow: 0 0 15px #4ea3ff, 0 0 25px #4ea3ff; }
+    }
+
     /* Light Mode */
     .light-mode {
-      background: #f5f5f5;
+      background: linear-gradient(135deg, #f0f0f0, #ffffff);
       color: #222;
     }
 
     .light-mode header,
     .light-mode footer {
-      background: #e0e0e0;
+      background: rgba(255, 255, 255, 0.95);
       color: #222;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
     .light-mode .section,
     .light-mode .events {
-      background: rgba(0, 0, 0, 0.05);
-      color: #222;
+      background: rgba(0, 0, 0, 0.06);
       border-color: rgba(0, 0, 0, 0.1);
-    }
-
-    .light-mode .toggle {
-      background: #ccc;
-    }
-
-    .light-mode .toggle.active {
-      background: #007bff;
+      color: #222;
     }
 
     .light-mode .funny-text {
+      color: #d00;
+    }
+
+    .light-mode .modal-content {
+      background: #fff;
       color: #222;
+      border: 1px solid #ddd;
     }
 
     @media (max-width: 768px) {
-      .toggle-container { right: 80px; }
-      .signout-btn { right: 15px; font-size: 12px; padding: 5px 8px; }
-      .welcome { font-size: 24px; }
-      .section { width: 220px; height: 100px; font-size: 18px; }
+      header { flex-direction: column; padding: 14px; gap: 10px; }
+      .center-text { order: 1; }
+      .controls { order: 2; }
+      .welcome { font-size: 26px; }
+      .section { width: 220px; height: 110px; font-size: 19px; }
     }
 
     @media (max-width: 480px) {
-      header { flex-direction: column; padding: 10px; }
-      .center-text { margin: 10px 0; }
-      .toggle-container { position: static; margin: 10px 0; }
-      .signout-btn { position: static; margin-top: 10px; }
+      .section { width: 180px; height: 90px; font-size: 17px; }
+      .funny-text { font-size: 22px; }
     }
   </style>
+
+  <!-- TAWK.TO GROUP CHAT -->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/6915bf4d44b389195f754c72/1j9uf6i25';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
 </head>
 <body>
 
+  <!-- Header -->
   <header>
-    <img src="logo.png" alt="WhitePEAK Logo" onerror="this.src='https://via.placeholder.com/45?text=WP'" />
+    <img src="LOGO.jpg.png" alt="WhitePEAK Logo"
+         onerror="this.src='https://via.placeholder.com/48/111111/ffffff?text=WP'; this.onerror=null;">
     <div class="center-text">
       <h1>NOTHING YOU NEED TO REMEMBER</h1>
       <p id="userDisplay">Logged in as: ...</p>
     </div>
-
-    <div class="toggle-container">
-      <div class="toggle" id="themeToggle"></div>
+    <div class="controls">
+      <div class="toggle-container">
+        <span>Dark</span>
+        <div class="toggle" id="themeToggle"></div>
+        <span>Light</span>
+      </div>
+      <button class="signout-btn" onclick="signOut()">Sign Out</button>
     </div>
-
-    <button class="signout-btn" onclick="signOut()">Sign Out</button>
   </header>
 
+  <!-- Main Content -->
   <main>
-    <div class="welcome">Welcome to WhitePEAK Portal</div>
+    <h1 class="welcome">Welcome to WhitePEAK Portal</h1>
 
     <div class="sections">
-      <div class="section">Class Work</div>
-      <div class="section">Home Work</div>
-      <div class="section">Assignments</div>
+      <div class="section" onclick="openModal('Class Work')" tabindex="0" role="button" aria-label="Open Class Work">
+        Class Work
+      </div>
+      <div class="section" onclick="openModal('Home Work')" tabindex="0" role="button" aria-label="Open Home Work">
+        Home Work
+      </div>
+      <div class="section" onclick="openModal('Assignments')" tabindex="0" role="button" aria-label="Open Assignments">
+        Assignments
+      </div>
     </div>
 
     <div class="events">
-      <h3>Events</h3>
+      <h3>Upcoming Events</h3>
       <p>Oops, nothing to see here right now.</p>
     </div>
 
-    <div class="funny-text"><b>BETTER USE THIS SITE DAILY, MUAHAHAHAHAH</b></div>
+    <div class="funny-text">
+      <b>BETTER USE THIS SITE DAILY, MUAHAHAHAHAH</b>
+    </div>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 WhitePEAK Productions — All Rights Reserved.</p>
     <p>Founder & Developer: <strong>Shreyam Sharma & Saksham Kumar</strong></p>
-    <p>Contact: <a href="mailto:whitepeakproductions9811@gmail.com" style="color: #4ea3ff;">whitepeakproductions9811@gmail.com</a></p>
+    <p>Contact: <a href="mailto:whitepeakproductions9811@gmail.com">whitepeakproductions9811@gmail.com</a></p>
   </footer>
 
+  <!-- Modal -->
+  <div class="modal" id="pdfModal">
+    <div class="modal-content">
+      <h3 id="modalTitle">Class Work</h3>
+      <p>Nothing to see here right now.<br><strong>Contact the DEV</strong> for updates!</p>
+      <button class="close-btn" onclick="closeModal()">Close</button>
+    </div>
+  </div>
+
+  <!-- DEV HIGHLIGHT + GROUP CHAT TITLE -->
+  <script type="text/javascript">
+    Tawk_API.onLoad = function () {
+      const username = localStorage.getItem("username");
+      const devUsers = ["Shreyam", "Saksham"];
+
+      if (username) {
+        const isDev = devUsers.includes(username);
+
+        Tawk_API.setAttributes({
+          name: isDev ? `${username} (DEV)` : username,
+          email: username.toLowerCase() + "@whitepeak.student"
+        });
+
+        // Highlight DEV messages with glow
+        Tawk_API.onChatMessageVisitor = function () {
+          if (isDev) {
+            setTimeout(() => {
+              const messages = document.querySelectorAll('.tawk-message-content');
+              const last = messages[messages.length - 1];
+              if (last && last.innerText.includes(username)) {
+                const msgText = last.innerHTML.split(':').slice(1).join(':');
+                last.innerHTML = `<strong style="color: #4ea3ff; font-weight: 700; animation: glow 2s infinite alternate;">${username} (DEV)</strong>: ${msgText}`;
+              }
+            }, 300);
+          }
+        };
+      }
+
+      // Set group chat title
+      Tawk_API.onChatMaximized = function () {
+        setTimeout(() => {
+          const title = document.querySelector('.tawk-title');
+          if (title) {
+            title.innerHTML = '<strong>WhitePEAK Community Chat</strong>';
+          }
+        }, 500);
+      };
+    };
+  </script>
+
   <script>
-    // === USER AUTHENTICATION ===
+    // === AUTH CHECK ===
     const username = localStorage.getItem("username");
     const userDisplay = document.getElementById("userDisplay");
 
     if (!username || username.trim() === "") {
-      window.location.href = "intro.html";
+      window.location.href = "index.html";
     } else {
-      userDisplay.textContent = "Logged in as: " + username;
+      userDisplay.textContent = `Logged in as: ${username}`;
     }
 
-    // === THEME TOGGLE (Persistent) ===
+    // === THEME TOGGLE ===
     const toggle = document.getElementById("themeToggle");
     const body = document.body;
 
-    // Load saved theme
     if (localStorage.getItem("theme") === "light") {
       body.classList.add("light-mode");
       toggle.classList.add("active");
@@ -324,22 +494,53 @@
     toggle.addEventListener("click", () => {
       body.classList.toggle("light-mode");
       toggle.classList.toggle("active");
+      localStorage.setItem("theme", body.classList.contains("light-mode") ? "light" : "dark");
+    });
 
-      // Save preference
-      const isLight = body.classList.contains("light-mode");
-      localStorage.setItem("theme", isLight ? "light" : "dark");
+    // === MODAL FUNCTIONS ===
+    const modal = document.getElementById("pdfModal");
+    const modalTitle = document.getElementById("modalTitle");
+
+    function openModal(title) {
+      modalTitle.textContent = title;
+      modal.style.display = "flex";
+      document.body.style.overflow = "hidden";
+    }
+
+    function closeModal() {
+      modal.style.display = "none";
+      document.body.style.overflow = "auto";
+    }
+
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape" && modal.style.display === "flex") {
+        closeModal();
+      }
+    });
+
+    modal.addEventListener("click", (e) => {
+      if (e.target === modal) closeModal();
     });
 
     // === SIGN OUT ===
     function signOut() {
       if (confirm("Are you sure you want to sign out?")) {
         localStorage.removeItem("username");
-        localStorage.removeItem("password");
-        localStorage.removeItem("rememberMe");
+        localStorage.removeItem("wp_name");
+        localStorage.removeItem("wp_gender");
         window.location.href = "index.html";
       }
     }
-  </script>
 
+    // === Keyboard Support ===
+    document.querySelectorAll('.section').forEach(sec => {
+      sec.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          openModal(sec.textContent.trim());
+        }
+      });
+    });
+  </script>
 </body>
 </html>
